--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+
 # C extensions
 *.so
 
 # Distribution / packaging
 .Python
+style_transfer_results/
 build/
 develop-eggs/
 dist/
